# VRLoadingScreens

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
package/Data/F4SE/Plugins/: VRLoadingScreens.ini
package/Data/MCM/Config/VRLoadingScreens/: config.json  settings.ini
src/: D3D11Compositor.cpp  D3D11Compositor.h  LoadingScreenManager.cpp  LoadingScreenManager.h  PCH.h  PapyrusOptimizer.cpp  PapyrusOptimizer.h  PerformancePatches.cpp  PerformancePatches.h  VRCompositorHelper.cpp  VRCompositorHelper.h  main.cpp
